# swagger.json
@@ -217,6 +217,16 @@
             }
           },
           {
+            "name": "hideServerTag",
+            "in": "query",
+            "description": "Whether to hide the user's server tag.",
+            "schema": {
+              "type": "integer",
+              "enum": [0, 1],
+              "default": 0
+            }
+          },
+          {
             "name": "noActivityTitle",
             "in": "query",
             "description": "The title to display when the user has no activity.",
